--- a/App/Home/View/default/Common/header.html
+++ b/App/Home/View/default/Common/header.html
@@ -17,10 +17,10 @@
         <div class="clear"></div>
         <div class="sub">
           <div class="little-up"></div>
-          <div class="cont"> <a href="{:U('b2b2c')}"  title="B2B2C多用户商城系统">
+          <div class="cont">
             <dl style="border-bottom: dotted 1px #CCC;" >
-              <dt>CRM</dt>
-              <dd>PHP语言开发，功能强大，易用性强，电商创业最佳选择。</dd>
+              <dt><a href="{:U('crm')}"  title="CRM">CRM</a></dt>
+              <dd> <a href="{:U('crm')}"  title="CRM">PHP语言开发，功能强大，易用性强，电商创业最佳选择。 </a></dd>
             </dl>
 			<dl style="border-bottom: dotted 1px #CCC;" >
               <dt>销售模块</dt>
@@ -35,7 +35,7 @@
               <dt>财务模块</dt>
 			  <dd>三级分销引爆流量。</dd>
             </dl>
-            </a>
+
             <!-- <a href="mall-java.html"  title="Java多用户商城系统">
               <dl>
                 <dt>Java多用户商城系统</dt>
