--- a/App/Home/View/default/Common/header.html
+++ b/App/Home/View/default/Common/header.html
@@ -17,7 +17,7 @@
         <div class="clear"></div>
         <div class="sub">
           <div class="little-up"></div>
-          <div class="cont"> <a href="{:U('b2b2c')}"  title="B2B2C多用户商城系统">
+          <div class="cont"> <a href="{:U('crm')}"  title="B2B2C多用户商城系统">
             <dl style="border-bottom: dotted 1px #CCC;" >
               <dt>CRM</dt>
               <dd>PHP语言开发，功能强大，易用性强，电商创业最佳选择。</dd>
