--- a/App/Home/View/default/Common/header.html
+++ b/App/Home/View/default/Common/header.html
@@ -23,8 +23,8 @@
               <dd> <a href="{:U('crm')}"  title="CRM">PHP语言开发，功能强大，易用性强，电商创业最佳选择。 </a></dd>
             </dl>
 			<dl style="border-bottom: dotted 1px #CCC;" >
-              <dt>销售模块</dt>
-			  <dd>三级分销引爆流量。</dd>
+              <dt><a href="{:U('sales')}"  title="销售模块">销售模块</a></dt>
+			  <dd><a href="{:U('sales')}"  title="销售模块">三级分销引爆流量。</a></dd>
             </dl><dl style="border-bottom: dotted 1px #CCC;" >
               <dt>仓库模块</dt>
 			  <dd>三级分销引爆流量。</dd>
