--- a/App/Home/View/default/Common/layout.html
+++ b/App/Home/View/default/Common/layout.html
@@ -11,6 +11,7 @@
 <meta name="description" content="{:C('SITE_DESCRIPTION')}" />
 <link rel="shortcut icon" href="images/logo-ico.png">
 <title>{:C('SITE_TITLE')}</title>
+<link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 <link href="__STATIC__/css/base.css"  rel="stylesheet">
 <link href="__STATIC__/css/home.css"  rel="stylesheet">
 <link href="__STATIC__/css/animate.css"  rel="stylesheet">
