--- a/Public/Static/css/home.css
+++ b/Public/Static/css/home.css
@@ -1,4 +1,4 @@
-﻿html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,#header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:12px;vertical-align:baseline;background:transparent;font-family:"Microsoft YaHei",Helvetica;}
+﻿html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,#header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-weight:300;vertical-align:baseline;background:transparent;font-family:"Microsoft YaHei",Helvetica;}
 body{ margin:0; padding:0; min-width:1200px;}
 html,body{min-height:100%;_height:100%; height:100%}
 img{outline:none}
