--- a/Public/Static/css/base.css
+++ b/Public/Static/css/base.css
@@ -400,3 +400,82 @@ float: right; }
 
 
 
+.bg-white {
+    background-color: #fff;
+    color: #666c75;
+}
+.text-center {
+    text-align: center;
+}
+.btn {
+    z-index: 1;
+    font-family: "Work Sans", sans-serif;
+    font-size: 11.2px;
+    text-transform: uppercase;
+    letter-spacing: -0.03em;
+    -webkit-transition: all 0.3s cubic-bezier(0.55, 0, 0.1, 1);
+    -o-transition: all 0.3s cubic-bezier(0.55, 0, 0.1, 1);
+    transition: all 0.3s cubic-bezier(0.55, 0, 0.1, 1);
+}
+.btn.o_btn_cta {
+    padding: 1.1em 2em;
+    font-size: 12.6px;
+    font-weight: 700;
+    letter-spacing: -0.02em;
+    width: 250px;
+    max-width: 100%;
+    white-space: normal;
+}
+.mt8 {
+    margin-top: 8px !important;
+}
+.mb10 {
+    margin-top: 10px !important;
+}
+.mt16 {
+    margin-top: 16px !important;
+}
+.mt24 {
+    margin-top: 24px !important;
+}
+.mt32 {
+    margin-top: 32px !important;
+}
+.mb96 {
+    margin-bottom: 96px !important;
+}
+.mb64 {
+    margin-bottom: 64px !important;
+}
+.mt92 {
+    margin-top: 92px !important;
+}
+.mb92 {
+    margin-bottom: 92px !important;
+}
+.display-2 {
+    font-size: 5.5rem;
+}
+.mt0 {
+    margin-top: 0px !important;
+}
+.mb16 {
+    margin-bottom: 16px !important;
+}
+.fw_light {
+    font-weight: 300;
+}
+.mb0 {
+    margin-bottom: 0px !important;
+}
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    color: #21313a;
+}
+body .text-gamma {
+    color: #E46F78;
+}
+.o-icon.fa.fa-2x, .s_timeline ul.timeline li .timeline-content .fa.fa.fa-2x, .s_timeline ul.timeline li .timeline-content-double .fa.fa.fa-2x {
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+}
