--- a/App/Home/View/default/Index/sales.html
+++ b/App/Home/View/default/Index/sales.html
@@ -1,47 +1,11 @@
 
 <link rel="stylesheet" href="__STATIC__/css/web.assets_frontend.2.css">
 <style>
-
-
-    .btn {
-        z-index: 1;
-        font-family: "Work Sans", sans-serif;
-        font-size: 11.2px;
-        text-transform: uppercase;
-        letter-spacing: -0.03em;
-        -webkit-transition: all 0.3s cubic-bezier(0.55, 0, 0.1, 1);
-        -o-transition: all 0.3s cubic-bezier(0.55, 0, 0.1, 1);
-        transition: all 0.3s cubic-bezier(0.55, 0, 0.1, 1);
-    }
-    .btn.o_btn_cta {
-        padding: 1.1em 2em;
-        font-size: 12.6px;
-        font-weight: 700;
-        letter-spacing: -0.02em;
-        width: 250px;
-        max-width: 100%;
-        white-space: normal;
-    }
-    .mt8 {
-        margin-top: 8px !important;
-    }
-    .mb96 {
-        margin-bottom: 96px !important;
-    }
-    .display-2 {
-        font-size: 5.5rem;
-    }
-    .mt0 {
-        margin-top: 0px !important;
-    }
-    .mb16 {
-        margin-bottom: 16px !important;
-    }
-    .fw_light {
-        font-weight: 300;
-    }
-    .mb0 {
-        margin-bottom: 0px !important;
+    .o-icon.text-gamma {
+        border: 1px solid #333;
+        border-color: inherit;
+        font-size: 2em;
+        border-radius: 40px;
     }
     .o_v_align_col {
         display: -ms-flexbox;
@@ -66,7 +30,7 @@
     }
 </style>
     <div id="wrap" class="oe_structure oe_empty">
-        <section class="s_responsive_to_image_block js_top_banner bg-white" style="padding-bottom: 42%; background-image: url(&quot;/web/image/2246578&quot;); background-size: auto 100%; opacity: 1;">
+        <section class="s_responsive_to_image_block js_top_banner bg-white" style="padding-bottom: 42%; background-image: url(https://www.odoo.com/web/image/2246578); background-size: auto 100%; opacity: 1;">
             <div class="wrapper">
                 <div class="container">
                     <div class="row o_v_align_col">
@@ -103,7 +67,7 @@
         </section>
         <section class="o_offset_top_medium">
             <div class="container">
-                <div class="row">
+                <div class="row" style="margin-top: -50px;">
                     <div class="col-md-10 col-md-offset-1 text-center">
                         <div class="s_browser shadow text-left">
                             <img class="bar" src="//odoocdn.com/openerp_website/static/src/img/2016/components/browser.png" alt="">
@@ -207,21 +171,21 @@
                 <div class="row mt92 mb64">
                     <div class="col-md-4 mb32">
                         <img src="//odoocdn.com/web/image/2246227" class="img img-responsive deep-1" alt="">
-                        <h5 class="mt24">
+                        <h5 class="mt24 mb10">
                             <b>使用电子签名更快销售</b>
                         </h5>
                         <p>允许客户随处轻松查看并签署您的在线报价单。</p>
                     </div>
                     <div class="col-md-4 mb32">
                         <img src="//odoocdn.com/web/image/2246228" class="img img-responsive deep-1" alt="">
-                        <h5 class="mt24">
+                        <h5 class="mt24 mb10">
                             <b>快速有效地沟通</b>
                         </h5>
                         <p>获得相关活动的自定义提醒，通过电子邮件自动沟通报价，全面追踪所有谈判记录。<br></p>
                     </div>
                     <div class="col-md-4 mb32">
                         <img src="//odoocdn.com/web/image/2246229" class="img img-responsive deep-1" alt="" style="">
-                        <h5 class="mt24">
+                        <h5 class="mt24 mb10">
                             <b>通过超售实现利润最大化</b>
                         </h5>
                         <p>通过自动提出额外选项和配件、申请关闭触发条件、折扣等来提高销量。</p>
