--- a/App/Home/View/default/Index/sales.html
+++ b/App/Home/View/default/Index/sales.html
@@ -207,8 +207,8 @@
 
 
                         </h2>
-                        <h4 class="fw_light mb32">以专业方式展示产品和服务。</h4>
-                        <p>向潜在客户发送清晰且完整的报价单。只需简单拖放构建模块，即可轻松添加产品说明、美观的图像以及其他信息。</p>
+                        <h4 class="fw_light mb32 mt8">以专业方式展示产品和服务。</h4>
+                        <p style="font-size: 14px;">向潜在客户发送清晰且完整的报价单。只需简单拖放构建模块，即可轻松添加产品说明、美观的图像以及其他信息。</p>
                         <div class="s_testimonial text-heading font-heading mt64">
                             <div class="thumb">
                                 <img src="//odoocdn.com/website/image/ir.attachment/1093293_b901261/datas" alt="Ruben Real" class="img img-responsive">
@@ -228,8 +228,8 @@
             </div>
         </section>
         <section>
-            <div class="container mt92 mb64">
-                <div class="row">
+            <div class="container ">
+                <div class="row mt92 mb64">
                     <div class="col-md-12 text-center mb48">
                         <h2 class="display-3 fw_extralight mt0">实惠的
 
