--- a/Public/Static/css/base.css
+++ b/Public/Static/css/base.css
@@ -399,7 +399,14 @@ float: right; }
 .pagination li span.currentpage { position: relative; z-index: 2; color: #FFF; font-weight: bold; background-color: #4FC0E8; border-color: #3BAEDA; border-radius: 0; }
 
 
-
+section {
+    background-color: #F9F9F9;
+    position: relative;
+    width: 100%;
+}
+.shadow {
+    box-shadow: -40px 40px 160px 0 rgba(0, 0, 0, 0.08), -8px 8px 15px 0 rgba(120, 120, 120, 0.04), 3px 3px 30px 0 rgba(0, 0, 0, 0.04) !important;
+}
 .bg-white {
     background-color: #fff;
     color: #666c75;
@@ -426,6 +433,12 @@ float: right; }
     max-width: 100%;
     white-space: normal;
 }
+.o_overflow_hidden {
+    overflow: hidden;
+}
+.mt4 {
+    margin-top: 4px !important;
+}
 .mt8 {
     margin-top: 8px !important;
 }
@@ -441,11 +454,19 @@ float: right; }
 .mt32 {
     margin-top: 32px !important;
 }
+.mb32 {
+    margin-bottom: 32px !important;
+}.mb48 {
+     margin-bottom: 48px !important;
+ }
 .mb96 {
     margin-bottom: 96px !important;
 }
 .mb64 {
     margin-bottom: 64px !important;
+}
+.mt64{
+    margin-top: 64px;
 }
 .mt92 {
     margin-top: 92px !important;
