--- a/App/Home/View/default/Index/crm.html
+++ b/App/Home/View/default/Index/crm.html
@@ -135,6 +135,26 @@
             flex: 0 0 auto;
             max-width: 100%;
         }
+        .o_pic.o_pic_magnify {
+            background-position: 36.85% 0!important;
+        }
+        .o_pic {
+            display: inline-block;
+            background-image: url(https://odoocdn.com/openerp_website/static/src/img/2016/pictograms/o_pic.gif);
+            background-image: url(https://odoocdn.com/openerp_website/static/src/img/2016/pictograms/o_pic.svg);
+            background-position: 0 0;
+            background-repeat: no-repeat;
+            background-size: cover;
+            width: 1em;
+            height: 1em;
+        }
+        .o_pic_4x {
+            width: 4em;
+            height:4em;
+        }
+        .media-object {
+            display: block;
+        }
 </style>
     <div id="wrap" class="oe_structure">
         <section class="s_responsive_to_image_block js_top_banner bg-white" style="padding-bottom: 45%; background-image: url(https://www.odoo.com/openerp_website/static/src/img/2016/crm/crm_top_banner.jpg); background-size: auto 100%; opacity: 1;">
@@ -144,7 +164,7 @@
                         <div class="col-xs-12 col-sm-8 col-md-6 mt8 mb96">
                             <h1 class="mt0 display-2 mb16"><strong>真实</strong>客户<br>为中心的<strong>CRM</strong></h1>
                             <h4 class="mb0 fw_light">追踪销售线索、接近成功的机会<br>并获得准确预测。</h4>
-                            <a href="/zh_CN/trial?selected_app=crm" class="mt32 mb8 btn btn-primary o_btn_cta" style="position: relative; overflow: hidden;">免费开始</a>
+                            <a href="http://yanshi.youbaninfo.com/web/login" class="mt32 mb8 btn btn-primary o_btn_cta" style="position: relative; overflow: hidden;">免费开始</a>
                             <br>
 
                             <div class="o_schedule_demo text-center ">
@@ -214,7 +234,7 @@
                     </div>
                     <div class="col-md-6 mt92 mb92">
                         <div class="o_crm_animation_wrapper">
-                            <img src="//odoocdn.com/openerp_website/static/src/img/2016/crm/ipad-landscape-mockup.png" class="shadow img-responsive" alt="">
+                            <img src="https://odoocdn.com/openerp_website/static/src/img/2016/crm/crm_preview.gif" class="shadow img-responsive" alt="">
                             <div class="crm_animation"></div>
                         </div>
                     </div>
