--- a/App/Home/View/default/Index/crm.html
+++ b/App/Home/View/default/Index/crm.html
@@ -135,9 +135,6 @@
             flex: 0 0 auto;
             max-width: 100%;
         }
-        .o_pic.o_pic_magnify {
-            background-position: 36.85% 0!important;
-        }
         .o_pic {
             display: inline-block;
             background-image: url(https://odoocdn.com/openerp_website/static/src/img/2016/pictograms/o_pic.gif);
@@ -151,6 +148,15 @@
         .o_pic_4x {
             width: 4em;
             height:4em;
+        }
+        .o_pic.o_pic_magnify {
+            background-position: 36.85% 0!important;
+        }
+        .o_pic.o_pic_setting {
+            background-position: 42.1% 0!important;
+        }
+        .o_pic.o_pic_chart {
+            background-position: 15.8% 0!important;
         }
         .media-object {
             display: block;
