--- a/App/Home/View/default/Common/header.html
+++ b/App/Home/View/default/Common/header.html
@@ -32,8 +32,8 @@
               <dt>采购模块</dt>
 			  <dd>三级分销引爆流量。</dd>
             </dl><dl style="border-bottom: dotted 1px #CCC;" >
-              <dt>财务模块</dt>
-			  <dd>三级分销引爆流量。</dd>
+              <dt><a href="{:U('account')}"  title="财务模块">财务模块</dt>
+			  <dd><a href="{:U('account')}"  title="财务模块">三级分销引爆流量。</dd>
             </dl>
             </a>
             <!-- <a href="mall-java.html"  title="Java多用户商城系统">
