--- a/App/Home/View/default/Index/index.html
+++ b/App/Home/View/default/Index/index.html
@@ -140,8 +140,8 @@ $(function(){
 </div>
 <div class="clear"></div>
 <div class="function-container">
-  <h2>服务优质    功能完善</h2>
-  <h3>宣汉网络产品始终以满足客户需求为己任，创造标准化的电商平台系统功能套件</h3>
+  <h2>功能模块</h2>
+  <h3>开源第一ERP，完整功能超乎你想象...</h3>
   <div class="function-content">
 <ul>
       <li class="f01"><a><span></span>
