--- a/App/Home/View/default/Index/sales.html
+++ b/App/Home/View/default/Index/sales.html
@@ -269,7 +269,7 @@
                             <b>合同</b>整理
 
                         </h2>
-                        <h4 class="fw_light mb32">自动运行且关注客户关系和收益</h4>
+                        <h4 class="fw_light mb32 mt8">自动运行且关注客户关系和收益</h4>
                     </div>
                 </div>
             </div>
@@ -281,7 +281,7 @@
                         <img src="//odoocdn.com/web/image/2246256" class="img img-responsive shadow" alt="" style="">
                     </div>
                     <div class="col-md-5 col-md-offset-1 mt48">
-                        <h5>从报价到销售订单</h5>
+                        <h5 class="mt64">从报价到销售订单</h5>
                         <p class="mb32">
                             <span style="color: rgb(90, 100, 120);line-height: 22px;background-color: rgb(254, 254, 254)">只需单次点击，即可将报价单转化为销售订单，或让客户通过简单的电子签名进行签字批准。</span>
                             <br>
