--- a/Public/Static/css/home.css
+++ b/Public/Static/css/home.css
@@ -51,7 +51,7 @@ input,select{vertical-align:middle}
 .topnav .top-nav li.nav-l:hover .sub{ display:block}
 /*.topnav .top-nav .little-up:hover{ background:url(../images/little-up.png) bottom no-repeat; position: relative; z-index:1000px;}*/
 .topnav .sub .little-up{ background:url("../images/little-up.png"/*tpa=http://www.shopnc.net/images/little-up.png*/) bottom no-repeat; position: absolute; z-index:1000px;top:-16px; left:100px; width:24px; height:16px;}
-.topnav .top-nav .nav-list .nav-list-link{ display:block; padding:0 15px; margin:30px 5px 0;width:auto; font-size:18px; color:#000000; font-weight: normal; text-align:center;}
+.topnav .top-nav .nav-list .nav-list-link{ display:block; padding:0 15px; margin:30px 5px 0;width:auto; font-size:18px; color:#000000; font-weight: 500; text-align:center;}
 .topnav .top-nav .nav-list-link:hover{ color:#000 !important; text-decoration:none;}
 /*.topnav div.sub{display:none;}*/
 .topnav .top-nav .nav-list .nav-list-link i{background:url("../images/dot2.png"/*tpa=http://www.shopnc.net/images/dot2.png*/) right no-repeat; display: block;width: 13px;height: 7px; display:inline-block; margin-left:10px;/*position: relative;top: -12px;left: 71px;*left:44px;*/}
