--- a/App/Home/View/default/Index/account.html
+++ b/App/Home/View/default/Index/account.html
@@ -1,4 +1,112 @@
 <link rel="stylesheet" href="__STATIC__/css/web.assets_frontend.2.css">
+<style>
+    .display-3 {
+        font-size: 4.5rem;
+    }
+    .mt96 {
+        margin-top: 96px !important;
+    }
+    p {
+        margin: 0 0 10px;
+    }
+    h5, h6, .h5, .h6 {
+        font-weight: 500;
+    }
+    .center-block {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .img-responsive, .thumbnail > img, .thumbnail a > img, .carousel-inner > .item > img, .carousel-inner > .item > a > img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+    }
+    [class^="col-md-"] {
+        min-height: 24px;
+    }
+    @media (min-width: 992px)
+        .col-md-offset-1 {
+            margin-left: 8.33333333%;
+        }
+
+            .col-md-10 {
+                width: 83.33333333%;
+            }
+            .s_browser {
+                position: relative;
+            }
+            .shadow {
+                box-shadow: -40px 40px 160px 0 rgba(0, 0, 0, 0.08), -8px 8px 15px 0 rgba(120, 120, 120, 0.04), 3px 3px 30px 0 rgba(0, 0, 0, 0.04) !important;
+            }
+            .text-left {
+                text-align: left;
+            }
+        a {
+            font-family: "Work Sans", sans-serif;
+            letter-spacing: -0.01em;
+            font-weight: 500;
+        }
+        a {
+            color: #875A7B;
+            text-decoration: none;
+        }
+        a {
+            background-color: transparent;
+        }
+        .fa-fw {
+            width: 1.28571429em;
+            text-align: center;
+        }
+        .fa {
+            display: inline-block;
+            font: normal normal normal 14px/1 FontAwesome;
+            font-size: inherit;
+            text-rendering: auto;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
+        .o_pic.o_pic_mail {
+            background-position: 0 0!important;
+        }
+        .o_pic.o_pic_responsive {
+            width: 100%;
+            height: 0;
+            padding-bottom: 100%;
+        }
+        .o_pic {
+            display: inline-block;
+            background-image: url(https://odoocdn.com/openerp_website/static/src/img/2016/pictograms/o_pic.gif);
+            background-image: url(https://odoocdn.com/openerp_website/static/src/img/2016/pictograms/o_pic.svg);
+            background-position: 0 0;
+            background-repeat: no-repeat;
+            background-size: cover;
+            width: 1em;
+            height: 1em;
+        }
+        .o_pic.o_pic_pay {
+            background-position: 10.5% 0!important;
+        }
+        .o_pic.o_pic_coin {
+            background-position: 5.3% 0!important;
+        }
+        b, strong {
+            font-weight: bold;
+        }
+        p {
+            margin: 0 0 10px;
+        }
+        .mt32 {
+            margin-top: 32px !important;
+        }
+        p {
+            display: block;
+            -webkit-margin-before: 1em;
+            -webkit-margin-after: 1em;
+            -webkit-margin-start: 0px;
+            -webkit-margin-end: 0px;
+        }
+</style>
 <div id="wrap" class="oe_structure">
     <section class="s_responsive_to_image_block js_top_banner bg-white" style="background-image: url(https://www.odoo.com/openerp_website/static/src/img/2016/accounting/accountant.jpg); padding-bottom: 45%; background-size: auto 100%; opacity: 1;">
         <div class="wrapper">
@@ -30,7 +138,7 @@
 
     <section class="o_offset_top_medium">
         <div class="container">
-            <div class="row">
+            <div class="row" style="margin-top:-50px;">
                 <div class="col-md-10 col-md-offset-1 text-center">
                     <div class="s_browser shadow text-left">
                         <img class="bar" src="//odoocdn.com/openerp_website/static/src/img/2016/components/browser.png" alt="">
