--- a/App/Home/View/default/Index/crm.html
+++ b/App/Home/View/default/Index/crm.html
@@ -162,6 +162,13 @@
         .media-object {
             display: block;
         }
+        .o_bg_arch5 {
+            background-image: url(https://odoocdn.com/openerp_website/static/src/img/2016/components/arch_5.jpg);
+        }
+        .row {
+            margin-left: -15px;
+            margin-right: -15px;
+        }
 </style>
     <div id="wrap" class="oe_structure">
         <section class="s_responsive_to_image_block js_top_banner bg-white" style="padding-bottom: 45%; background-image: url(https://www.odoo.com/openerp_website/static/src/img/2016/crm/crm_top_banner.jpg); background-size: auto 100%; opacity: 1;">
@@ -194,7 +201,7 @@
         </section>
         <section class="o_offset_top_medium">
             <div class="container">
-                <div class="row">
+                <div class="row" style="margin-top:-50px;>
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="s_browser shadow">
                             <img class="bar" src="//odoocdn.com/openerp_website/static/src/img/2016/components/browser.png" alt="">
