--- a/App/Home/View/default/Common/header.html
+++ b/App/Home/View/default/Common/header.html
@@ -29,8 +29,8 @@
               <dt>仓库模块</dt>
 			  <dd>三级分销引爆流量。</dd>
             </dl><dl style="border-bottom: dotted 1px #CCC;" >
-              <dt>采购模块</dt>
-			  <dd>三级分销引爆流量。</dd>
+              <dt><a href="{:U('purchase')}"  title="采购模块">采购模块</dt>
+			  <dd><a href="{:U('purchase')}"  title="采购模块">三级分销引爆流量。</dd>
             </dl><dl style="border-bottom: dotted 1px #CCC;" >
               <dt><a href="{:U('account')}"  title="财务模块">财务模块</dt>
 			  <dd><a href="{:U('account')}"  title="财务模块">三级分销引爆流量。</dd>
