--- a/App/Home/View/default/Common/header.html
+++ b/App/Home/View/default/Common/header.html
@@ -26,8 +26,8 @@
               <dt><a href="{:U('sales')}"  title="销售模块">销售模块</a></dt>
 			  <dd><a href="{:U('sales')}"  title="销售模块">三级分销引爆流量。</a></dd>
             </dl><dl style="border-bottom: dotted 1px #CCC;" >
-              <dt>仓库模块</dt>
-			  <dd>三级分销引爆流量。</dd>
+              <dt><a href="{:U('warehouse')}" title="仓库模块">仓库模块</a></dt>
+			  <dd><a href="{:U('warehouse')}" title="仓库模块">三级分销引爆流量。</a></dd>
             </dl><dl style="border-bottom: dotted 1px #CCC;" >
               <dt>采购模块</dt>
 			  <dd>三级分销引爆流量。</dd>
