--- a/App/Home/View/default/Index/index.html
+++ b/App/Home/View/default/Index/index.html
@@ -13,7 +13,7 @@
   <ul class="slides">
   <volist name="banner" id="vo">
   
-    <li style="background:url({:get_image_path($vo['picture'])}) bottom no-repeat; position:relative;">
+    <li style="background:url(/{:get_image_path($vo['picture'])}) bottom no-repeat; position:relative;">
       <a href="{$vo.url}" style="display: block; width: 100%;height:100%;"></a>
     </li>
   
