--- a/App/Home/View/default/Index/index.html
+++ b/App/Home/View/default/Index/index.html
@@ -98,7 +98,7 @@ $(function(){
   <div class="index-model-box">
     <div class="index-model">
         <ul>
-        <li class="p1"> <a class="box" href="" >
+        <li class="p1"> <a class="box" href="" style="background-image: url('/xh/images/CRM.jpg');">
               <div class="pic pic01"></div>
               <span style="left:75px;">B2B2C模式</span> </a>
               <dl>
@@ -107,7 +107,7 @@ $(function(){
               </dl>
             </li>
 
-            <li class="p1"> <a class="box" href="" >
+            <li class="p1"> <a class="box" href="" style="background-image: url('/xh/images/account.jpg');">
               <div class="pic pic02"></div>
               <span>B2C模式</span> </a>
               <dl>
@@ -116,7 +116,7 @@ $(function(){
               </dl>
             </li>
 
-            <li class="p1"> <a class="box" href="" >
+            <li class="p1"> <a class="box" href="" style="background-image: url('/xh/images/purchase.jpg');">
               <div class="pic pic03"></div>
               <span>O2O模式</span> </a>
               <dl>
@@ -125,7 +125,15 @@ $(function(){
               </dl>
             </li>
 
-            <li class="p1"> <a class="box" href="" >
+            <li class="p1"> <a class="box" href="" style="background-image: url('/xh/images/sale.jpg');">
+              <div class="pic pic04"></div>
+              <span>  微分销</span> </a>
+              <dl>
+                <dt>以个人间的交易为核心的多店商城系统</dt>
+                <dd> <a class="lf-a fl" href="" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="javascript:" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
+              </dl>
+
+            </li>ss="p1"> <a class="box" href="" style="background-image: url('/xh/images/stock.jpg');">
               <div class="pic pic04"></div>
               <span>  微分销</span> </a>
               <dl>
