--- a/App/Home/View/default/Common/header.html
+++ b/App/Home/View/default/Common/header.html
@@ -20,20 +20,20 @@
           <div class="cont">
             <dl style="border-bottom: dotted 1px #CCC;" >
               <dt><a href="{:U('crm')}"  title="CRM">CRM</a></dt>
-              <dd> <a href="{:U('crm')}"  title="CRM">PHP语言开发，功能强大，易用性强，电商创业最佳选择。 </a></dd>
+              <dd> <a href="{:U('crm')}"  title="CRM">真实客户为中心的CRM</a></dd>
             </dl>
 			<dl style="border-bottom: dotted 1px #CCC;" >
               <dt><a href="{:U('sales')}"  title="销售模块">销售模块</a></dt>
-			  <dd><a href="{:U('sales')}"  title="销售模块">三级分销引爆流量。</a></dd>
+			  <dd><a href="{:U('sales')}"  title="销售模块">业务流程一体及促进订单成交 </a></dd>
             </dl><dl style="border-bottom: dotted 1px #CCC;" >
               <dt><a href="{:U('warehouse')}" title="仓库模块">仓库模块</a></dt>
-			  <dd><a href="{:U('warehouse')}" title="仓库模块">三级分销引爆流量。</a></dd>
+			  <dd><a href="{:U('warehouse')}" title="仓库模块">现代化在线仓库，实现效率最大化</a></dd>
             </dl><dl style="border-bottom: dotted 1px #CCC;" >
               <dt><a href="{:U('purchase')}"  title="采购模块">采购模块</dt>
-			  <dd><a href="{:U('purchase')}"  title="采购模块">三级分销引爆流量。</dd>
+			  <dd><a href="{:U('purchase')}"  title="采购模块">改善您的供业链和库存绩效</dd>
             </dl><dl style="border-bottom: dotted 1px #CCC;" >
               <dt><a href="{:U('account')}"  title="财务模块">财务模块</dt>
-			  <dd><a href="{:U('account')}"  title="财务模块">三级分销引爆流量。</dd>
+			  <dd><a href="{:U('account')}"  title="财务模块">用更少的时间，做更多的事情</dd>
             </dl>
             </a>
             <!-- <a href="mall-java.html"  title="Java多用户商城系统">
