--- a/App/Home/View/default/Index/index.html
+++ b/App/Home/View/default/Index/index.html
@@ -133,7 +133,7 @@ $(function(){
                 <dd> <a class="lf-a fl" href="" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="javascript:" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
               </dl>
 
-            </li>ss="p1"> <a class="box" href="" style="background-image: url('/xh/images/stock.jpg');">
+            <li class="p1"> <a class="box" href="" style="background-image: url('/xh/images/stock.jpg');">
               <div class="pic pic04"></div>
               <span>  微分销</span> </a>
               <dl>
