--- a/App/Home/View/default/Index/index.html
+++ b/App/Home/View/default/Index/index.html
@@ -99,7 +99,7 @@ $(function(){
     <div class="index-model">
         <ul>
         <li class="p1"> <a class="box" href="" style="background-image: url('/xh/images/CRM.jpg');">
-              <span style="left:75px;">B2B2C模式</span> </a>
+              <span>B2B2C模式</span> </a>
               <dl>
                 <dt>融合B2B、B2C模式，助力打通上下游渠道产业链</dt>
                 <dd> <a class="lf-a fl" href="{:U('b2b2c')}" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="../v1-6/" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
