--- a/App/Home/View/default/Index/index.html
+++ b/App/Home/View/default/Index/index.html
@@ -98,42 +98,42 @@ $(function(){
   <div class="index-model-box">
     <div class="index-model">
         <ul>
-        <li class="p1"> <a class="box" href="" style="background-image: url('/xh/images/CRM.jpg');">
-              <span style="left:75px;">B2B2C模式</span> </a>
+        <li class="p1"> <a class="box" href="" style="background-image: url('/images/CRM.jpg');">
+              <span style="left:75px;">CRM</span> </a>
               <dl>
-                <dt>融合B2B、B2C模式，助力打通上下游渠道产业链</dt>
-                <dd> <a class="lf-a fl" href="{:U('b2b2c')}" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="../v1-6/" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
+                <dt>真实客户为中心的CRM </dt>
+                <dd> <a class="lf-a fl" href="{:U('b2b2c')}" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="http://yanshi.youbaninfo.com/web/login" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
               </dl>
             </li>
 
-            <li class="p1"> <a class="box" href="" style="background-image: url('/xh/images/account.jpg');">
-              <span>B2C模式</span> </a>
+            <li class="p1"> <a class="box" href="" style="background-image: url('/images/account.jpg');">
+              <span>财务模块</span> </a>
               <dl>
-                <dt>以垂直行业，大宗交易为基础模型的B2B商业模式</dt>
-                <dd> <a class="lf-a fl" href="" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="../b2c/" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
+                <dt>用更少的时间，做更多的事情</dt>
+                <dd> <a class="lf-a fl" href="" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="http://yanshi.youbaninfo.com/web/login" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
               </dl>
             </li>
 
-            <li class="p1"> <a class="box" href="" style="background-image: url('/xh/images/purchase.jpg');">
-              <span>O2O模式</span> </a>
+            <li class="p1"> <a class="box" href="" style="background-image: url('/images/purchase.jpg');">
+              <span>采购模块</span> </a>
               <dl>
-                <dt>将线下商务与互联网技术有效结合，让互联网成为线下交易的前台</dt>
-                <dd> <a class="lf-a fl" href="mall-o2o.html" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="javascript:" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
+                <dt>改善您的供业链和库存绩效</dt>
+                <dd> <a class="lf-a fl" href="mall-o2o.html" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="http://yanshi.youbaninfo.com/web/login" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
               </dl>
             </li>
 
-            <li class="p1"> <a class="box" href="" style="background-image: url('/xh/images/sale.jpg');">
-              <span>  微分销</span> </a>
+            <li class="p1"> <a class="box" href="" style="background-image: url('/images/sale.jpg');">
+              <span>销售模块</span> </a>
               <dl>
-                <dt>以个人间的交易为核心的多店商城系统</dt>
-                <dd> <a class="lf-a fl" href="" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="javascript:" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
+                <dt>业务流程一体及促进订单成交</dt>
+                <dd> <a class="lf-a fl" href="" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="http://yanshi.youbaninfo.com/web/login" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
               </dl>
 
-            <li class="p1"> <a class="box" href="" style="background-image: url('/xh/images/stock.jpg');">
-              <span>  微分销</span> </a>
+            <li class="p1"> <a class="box" href="" style="background-image: url('/images/stock.jpg');">
+              <span>仓库模块</span> </a>
               <dl>
-                <dt>以个人间的交易为核心的多店商城系统</dt>
-                <dd> <a class="lf-a fl" href="" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="javascript:" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
+                <dt>现代化在线仓库，实现效率最大化</dt>
+                <dd> <a class="lf-a fl" href="" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="http://yanshi.youbaninfo.com/web/login" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
               </dl>
             </li>
         </ul>
