--- a/App/Home/View/default/Index/index.html
+++ b/App/Home/View/default/Index/index.html
@@ -99,7 +99,7 @@ $(function(){
     <div class="index-model">
         <ul>
         <li class="p1"> <a class="box" href="" style="background-image: url('/images/CRM.jpg');">
-              <span style="left:75px;">CRM</span> </a>
+              <span>CRM</span> </a>
               <dl>
                 <dt>真实客户为中心的CRM </dt>
                 <dd> <a class="lf-a fl" href="{:U('b2b2c')}" >查看详情<i class="fa fa-caret-right"></i></a> <a class="lf-b fr" href="http://yanshi.youbaninfo.com/web/login" >查看测试网址<i class="fa fa-caret-right"></i></a> </dd>
