--- a/App/Home/View/default/Index/index.html
+++ b/App/Home/View/default/Index/index.html
@@ -38,7 +38,7 @@ $(function(){
 <div class="index-main">
   <div class="product-container" style="margin-bottom:40px;">
     <h2>做最好的产品</h2>
-    <h3>最专业、最权威的技术团队一心做事，为客户提供最适用的电商平台配套系统及服务</h3>
+    <h3>最专业、最权威的技术团队一心做事，为客户提供最适用的企业管理配套系统及服务</h3>
 
     <div class="product-module">
         <ul>
@@ -92,8 +92,8 @@ $(function(){
 <div class="clear"></div>
 <div class="business-model-box">
   <div class="business-model">
-    <h2>21世纪最具创新的电商团队</h2>
-    <h3>随着时代的发展，电商领域被细分为多种商业模式，宣汉网络根据不同的电商模式专注于B2B2C多端数据互通系统开发领域</h3>
+    <h2>21世纪最具创新的企业管理系统</h2>
+    <h3>随着时代的发展，电商领域被细分为多种商业模式，悟空系统根据不同的业务模式专注于企业级系统开发领域</h3>
   </div>
   <div class="index-model-box">
     <div class="index-model">
