--- a/App/Home/View/default/Index/crm.html
+++ b/App/Home/View/default/Index/crm.html
@@ -169,6 +169,23 @@
             margin-left: -15px;
             margin-right: -15px;
         }
+        img {
+            vertical-align: middle;
+        }
+        img {
+            border: 0;
+        }
+        .row {
+            margin-left: -15px;
+            margin-right: -15px;
+        }
+        .col-sm-10 {
+            width: 83.33333333%;
+        }
+        .col-sm-offset-1 {
+            margin-left: 8.33333333%;
+        }
+
 </style>
     <div id="wrap" class="oe_structure">
         <section class="s_responsive_to_image_block js_top_banner bg-white" style="padding-bottom: 45%; background-image: url(https://www.odoo.com/openerp_website/static/src/img/2016/crm/crm_top_banner.jpg); background-size: auto 100%; opacity: 1;">
@@ -201,7 +218,7 @@
         </section>
         <section class="o_offset_top_medium">
             <div class="container">
-                <div class="row" style="margin-top:-50px;>
+                <div class="row" style="margin-top:-50px;">
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="s_browser shadow">
                             <img class="bar" src="//odoocdn.com/openerp_website/static/src/img/2016/components/browser.png" alt="">
