--- a/App/Home/View/default/Index/solution-list.html
+++ b/App/Home/View/default/Index/solution-list.html
@@ -12,40 +12,40 @@
 <div class="product-content">
        <ul>
         <li class="p1"> <a href="solution-solution_department.html" >
-          <img src="__STATIC__/images/solution/list-01.jpg"  width="220" height="220" alt="综合百货行业" style="padding:30px 40px"/>
+          <img src="/images/toyota.jpg"  width="220" height="220" alt="丰田汽车" style="padding:30px 40px"/>
           </a>
           <dl>
-            <dt>综合百货行业</dt>
+            <dt>丰田汽车</dt>
             <dd>
               <p>传统商超百货行业通过电商系统搭建快捷、便利的购物平台</p>
               <!--<a href="solution-solution_department.html" >查看详情<i class="fa fa-caret-right"></i></a>--></dd>
           </dl>
         </li>
 		<li class="p1"> <a href="solution.html" >
-          <img src="__STATIC__/images/solution/list-05.jpg"  width="220" height="220" alt="汽车行业" style="padding:30px 40px"/>
+          <img src="/images/beer.jpg"  width="220" height="220" alt="Bertinchamps 啤酒厂" style="padding:30px 40px"/>
           </a>
           <dl>
-            <dt>生鲜行业</dt>
+            <dt>Bertinchamps 啤酒厂</dt>
             <dd>
               <p>无须担心加班等原因耽误购买食材，极速轻松“买菜体验” 生鲜方案</p>
               <!--<a href="solution-solution_department.html" >查看详情<i class="fa fa-caret-right"></i></a>--></dd>
           </dl>
         </li>
               <li class="p2"> <a href="solution-solution_crossborder2.html" >
-          <img src="__STATIC__/images/solution/list-06.jpg"  width="220" height="220" alt="母婴行业" style="padding:30px 40px"/>
+          <img src="/images/wireless.jpg"  width="220" height="220" alt="无线视点Wireless Vision" style="padding:30px 40px"/>
           </a>
           <dl>
-            <dt>母婴行业</dt>
+            <dt>无线视点</dt>
             <dd>
               <p>全网平台搭建，多触点连接用户，打通母婴市场全渠道的方案</p>
               <!--<a href="solution-solution_crossborder2.html" >查看详情<i class="fa fa-caret-right"></i></a>--></dd>
           </dl>
         </li>
 		<li class="p3"> <a href="solution-solution_crossborder5.html" >
-          <img src="__STATIC__/images/solution/list-07.jpg"  width="220" height="220" alt="医药行业" style="padding:30px 40px"/>
+          <img src="/images/cyto.jpg"  width="220" height="220" alt="CYTOSURGE" style="padding:30px 40px"/>
           </a>
           <dl>
-            <dt>数码行业</dt>
+            <dt>CYTOSURGE</dt>
             <dd>
               <p>随时随地享受多点位购物体验，让智能掌握在一掌之中。 电子产品方案</p>
              <!-- <a href="solution-solution_crossborder5.html" >查看详情<i class="fa fa-caret-right"></i></a>--></dd>
