--- a/App/Home/View/default/Index/solution-list.html
+++ b/App/Home/View/default/Index/solution-list.html
@@ -11,8 +11,8 @@
 </div>
 <div class="product-content">
        <ul>
-        <li class="p1"> <a href="solution-solution_department.html" >
-          <img src="/images/toyota.jpg"  width="220" height="220" alt="丰田汽车" style="padding:30px 40px"/>
+        <li class="p1"> <a href="#" style="text-align: center;width: 100%;display: block;">
+          <img src="/images/toyota.jpg"  width="220" height="220" alt="丰田汽车" style="padding:30px 30px;object-fit: cover;object-position: center;"/>
           </a>
           <dl>
             <dt>丰田汽车</dt>
@@ -21,8 +21,8 @@
               <!--<a href="solution-solution_department.html" >查看详情<i class="fa fa-caret-right"></i></a>--></dd>
           </dl>
         </li>
-		<li class="p1"> <a href="solution.html" >
-          <img src="/images/beer.jpg"  width="220" height="220" alt="Bertinchamps 啤酒厂" style="padding:30px 40px"/>
+		<li class="p1"> <a href="#" style="text-align: center;width: 100%;display: block;">
+          <img src="/images/beer.jpg"  width="220" height="220" alt="Bertinchamps 啤酒厂" style="padding:30px 30px;object-fit: cover;object-position: center;"/>
           </a>
           <dl>
             <dt>Bertinchamps 啤酒厂</dt>
@@ -31,8 +31,8 @@
               <!--<a href="solution-solution_department.html" >查看详情<i class="fa fa-caret-right"></i></a>--></dd>
           </dl>
         </li>
-              <li class="p2"> <a href="solution-solution_crossborder2.html" >
-          <img src="/images/wireless.jpg"  width="220" height="220" alt="无线视点Wireless Vision" style="padding:30px 40px"/>
+              <li class="p2"> <a href="#" style="text-align: center;width: 100%;display: block;" >
+          <img src="/images/wireless.jpg"  width="220" height="220" alt="无线视点Wireless Vision" style="padding:30px 30px;object-fit: cover;object-position: center;"/>
           </a>
           <dl>
             <dt>无线视点</dt>
@@ -41,8 +41,8 @@
               <!--<a href="solution-solution_crossborder2.html" >查看详情<i class="fa fa-caret-right"></i></a>--></dd>
           </dl>
         </li>
-		<li class="p3"> <a href="solution-solution_crossborder5.html" >
-          <img src="/images/cyto.jpg"  width="220" height="220" alt="CYTOSURGE" style="padding:30px 40px"/>
+		<li class="p3"> <a href="#" style="text-align: center;width: 100%;display: block;">
+          <img src="/images/cyto.jpg"  width="220" height="220" alt="CYTOSURGE" style="padding:30px 30px;object-fit: cover;object-position: center; "/>
           </a>
           <dl>
             <dt>CYTOSURGE</dt>
