--- a/App/Home/View/Wap/Common/footer.html
+++ b/App/Home/View/Wap/Common/footer.html
@@ -1,6 +1,6 @@
 <div class="footer" id="footer"> 
 <div class="line"></div>
-    <div class="tit">宣汉7yun</div>
+    <div class="tit">柚伴信息</div>
     <ul>
         <li><a href=""><img src="__WAP__/image/weixin.png" alt=""></a></li>
         <li><a href=""><img src="__WAP__/image/txwb.png" alt=""></a></li>
