--- a/App/Home/View/default/Common/header.html
+++ b/App/Home/View/default/Common/header.html
@@ -29,11 +29,11 @@
               <dt><a href="{:U('warehouse')}" title="仓库模块">仓库模块</a></dt>
 			  <dd><a href="{:U('warehouse')}" title="仓库模块">现代化在线仓库，实现效率最大化</a></dd>
             </dl><dl style="border-bottom: dotted 1px #CCC;" >
-              <dt><a href="{:U('purchase')}"  title="采购模块">采购模块</dt>
-			  <dd><a href="{:U('purchase')}"  title="采购模块">改善您的供业链和库存绩效</dd>
+              <dt><a href="{:U('purchase')}"  title="采购模块">采购模块</a></dt>
+			  <dd><a href="{:U('purchase')}"  title="采购模块">改善您的供业链和库存绩效</a></dd>
             </dl><dl style="border-bottom: dotted 1px #CCC;" >
-              <dt><a href="{:U('account')}"  title="财务模块">财务模块</dt>
-			  <dd><a href="{:U('account')}"  title="财务模块">用更少的时间，做更多的事情</dd>
+              <dt><a href="{:U('account')}"  title="财务模块">财务模块</a></dt>
+			  <dd><a href="{:U('account')}"  title="财务模块">用更少的时间，做更多的事情</a></dd>
             </dl>
             </a>
             <!-- <a href="mall-java.html"  title="Java多用户商城系统">
