--- a/App/Home/View/Wap/Common/layout.html
+++ b/App/Home/View/Wap/Common/layout.html
@@ -40,7 +40,8 @@
 <link rel="shortcut icon" href="__WAP__/images/favicon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
+<link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+<link href="__STATIC__/font-awesome-4.7.0/css/font-awesome.css"  rel="stylesheet">
 <link rel="stylesheet" href="__WAP__/css/style.css" >
 <script type="text/javascript" src="__WAP__/js/jquery-1.9.1.js" ></script>
 <script type="text/javascript" src="__WAP__/js/yxMobileSlider.js" ></script>
@@ -60,10 +61,14 @@
        <li class="tel"><img src="__WAP__/image/tel.png" alt="tel"></li>
    </ul>
    <ul class="list">
-       <li class="item_menu"><a class="item_link" href="{:U('B2B2C')}">B2B2C多用户商城系统</a></li>
+       <li class="item_menu"><a class="item_link" href="{:U('crm')}">CRM</a></li>
   
-       <li class="item_menu"><a class="item_link" href="{:U('APP')}">移动应用</a></li>
-       <li class="item_menu"><a class="item_link" href="{:U('solutions')}">电商解决方案</a></li>
+       <li class="item_menu"><a class="item_link" href="{:U('sales')}">销售模块</a></li>
+       <li class="item_menu"><a class="item_link" href="{:U('APP')}">仓库模块</a></li>
+       <li class="item_menu"><a class="item_link" href="{:U('APP')}">销售模块</a></li>
+       <li class="item_menu"><a class="item_link" href="{:U('APP')}">采购模块</a></li>
+       <li class="item_menu"><a class="item_link" href="{:U('APP')}">财务模块</a></li>
+       <li class="item_menu"><a class="item_link" href="{:U('solutions')}">行业案例</a></li>
        <li class="item_menu"><a class="item_link" href="{:U('about')}">关于我们</a></li>
    </ul>
 </nav>
