--- a/App/Home/View/Wap/Wap/index.html
+++ b/App/Home/View/Wap/Wap/index.html
@@ -2,11 +2,9 @@
 <div class="banner">
   <div style="width: 640px; height: 640px; position: relative; overflow: hidden; margin: 0px auto;" class="slider">
     <ul style="position: absolute; left: -2560px; width: 3840px;">
-      <li><a href="Bizpower.html" ><img src="__WAP__/image/nc_banner_1.jpg"  alt="ShopNC" alt=""></a></li>
-      <li><a href="distribution.html" ><img src="__WAP__/image/nc_banner_2.jpg"  alt="ShopNC" alt=""></a></li>
-      <li><a href="live.html" ><img src="__WAP__/image/nc_banner_3.jpg"  alt="ShopNC" alt=""></a></li>
-      <li><a href="live.html" ><img src="__WAP__/image/nc_banner_4.jpg"  alt="ShopNC" alt=""></a></li>
-      <li><a href="solutions.html" ><img src="__WAP__/image/nc_banner_5.jpg"  alt="ShopNC" alt=""></a></li>
+      <volist name="banner" id="vo">
+      <li style="background:url(/{:get_image_path($vo['picture'])}) bottom no-repeat; position:relative;"></li>
+      </volist>
     </ul>
     <div style="min-height: 0px; position: absolute; bottom: 0px; width: 640px; height: 64px; z-index: 2;"class="focus">
     <div>
