--- a/App/Home/View/Wap/index.html
+++ b/App/Home/View/Wap/index.html
@@ -53,7 +53,11 @@
 <div class="banner">
   <div style="width: 640px; height: 640px; position: relative; overflow: hidden; margin: 0px auto;" class="slider">
     <ul style="position: absolute; left: -2560px; width: 3840px;">
-      <li><a href="Bizpower.html" ><img src="/{:get_image_path($vo['picture'])}"  alt="宣汉7yun" alt=""></a></li>
+      <li><a href="Bizpower.html" ><img src="image/nc_banner_1.jpg"  alt="宣汉7yun" alt=""></a></li>
+      <li><a href="distribution.html" ><img src="image/nc_banner_2.jpg"  alt="宣汉7yun" alt=""></a></li>
+      <li><a href="live.html" ><img src="image/nc_banner_3.jpg"  alt="宣汉7yun" alt=""></a></li>
+      <li><a href="live.html" ><img src="image/nc_banner_4.jpg"  alt="宣汉7yun" alt=""></a></li>
+      <li><a href="solutions.html" ><img src="image/nc_banner_5.jpg"  alt="宣汉7yun" alt=""></a></li>
     </ul>
     <div style="min-height: 0px; position: absolute; bottom: 0px; width: 640px; height: 64px; z-index: 2;"class="focus">
     <div>
