--- a/App/Home/View/Wap/Wap/index.html
+++ b/App/Home/View/Wap/Wap/index.html
@@ -3,7 +3,7 @@
   <div style="width: 640px; height: 640px; position: relative; overflow: hidden; margin: 0px auto;" class="slider">
     <ul style="position: absolute; left: -2560px; width: 3840px;">
       <volist name="banner" id="vo">
-      <li><a href="Bizpower.html" ><img src="{:get_image_path($vo['picture'])}"  alt="ShopNC" alt=""></a></li>
+      <li><a><img src="{:get_image_path($vo['picture'])}"  alt="ShopNC" alt=""></a></li>
       </volist>
     </ul>
     <div style="min-height: 0px; position: absolute; bottom: 0px; width: 640px; height: 64px; z-index: 2;"class="focus">
