--- a/App/Home/View/Wap/Wap/index.html
+++ b/App/Home/View/Wap/Wap/index.html
@@ -19,7 +19,7 @@
   </div>
 </div>
 <script>
-    $(".slider").yxMobileSlider({width: 640, height: 640, during: 5000});
+    $(".slider").yxMobileSlider({width: 640, height: auto, during: 5000});
 </script>
 <div class="product">
   <ul>
