--- a/App/Home/View/Wap/Common/layout.html
+++ b/App/Home/View/Wap/Common/layout.html
@@ -64,10 +64,9 @@
        <li class="item_menu"><a class="item_link" href="{:U('crm')}">CRM</a></li>
   
        <li class="item_menu"><a class="item_link" href="{:U('sales')}">销售模块</a></li>
-       <li class="item_menu"><a class="item_link" href="{:U('APP')}">仓库模块</a></li>
-       <li class="item_menu"><a class="item_link" href="{:U('APP')}">销售模块</a></li>
-       <li class="item_menu"><a class="item_link" href="{:U('APP')}">采购模块</a></li>
-       <li class="item_menu"><a class="item_link" href="{:U('APP')}">财务模块</a></li>
+       <li class="item_menu"><a class="item_link" href="{:U('warehouse')}">仓库模块</a></li>
+       <li class="item_menu"><a class="item_link" href="{:U('purchase')}">采购模块</a></li>
+       <li class="item_menu"><a class="item_link" href="{:U('account')}">财务模块</a></li>
        <li class="item_menu"><a class="item_link" href="{:U('solutions')}">行业案例</a></li>
        <li class="item_menu"><a class="item_link" href="{:U('about')}">关于我们</a></li>
    </ul>
