--- a/App/Home/View/Wap/Wap/crm.html
+++ b/App/Home/View/Wap/Wap/crm.html
@@ -30,7 +30,10 @@
         }
 
         .mt0 {
-            margin-top: 30px !important;
+            margin-top: 40px !important;
+        }
+        .mt92 {
+            margin-top: 0px !important;
         }
 
 </style>
@@ -66,7 +69,7 @@
         <section class="o_offset_top_medium">
             <div class="container">
                 <div class="row" style="margin-top:-50px;">
-                    <div class="col-sm-10 col-sm-offset-1">
+                    <div class="col-sm-10 col-sm-offset-1" style="margin-top: 25px !important;">
                         <div class="s_browser shadow">
                             <img class="bar" src="//odoocdn.com/openerp_website/static/src/img/2016/components/browser.png" alt="">
                             <div class="content">
@@ -137,7 +140,7 @@
         <section class="o_bottom_bar_white o_overflow_hidden">
             <div class="container mt92">
                 <div class="row o_v_align_col mt92">
-                    <div class="col-xs-12 col-sm-6">
+                    <div class="col-xs-12 col-sm-6" style="margin-top: 20px;">
                         <h2 class="display-4"><strong>实时</strong> 概览</h2>
                         <h5 class="mt8">Easily review your performances &amp; next activities.</h5>
                         <p class="mt32 mb64">对比您的每月目标，准确了解您的表现。<br>根据您安排的下一行动，组织您的工作。</p>
@@ -167,7 +170,7 @@
         <section class="o_bottom_bar_dark bg-white o_overflow_hidden">
             <div class="container mt92">
                 <div class="row mt92">
-                    <div class="col-sm-6">
+                    <div class="col-sm-6" style="margin-top: 60px;">
                         <img class="img shadow img-responsive" src="//odoocdn.com/openerp_website/static/src/img/2016/crm/crm_screenshot_05.gif" alt="">
                     </div>
                     <div class="col-sm-6 col-md-5 col-md-offset-1">
